--- a/src/components/customHeader/custom_header.module.scss
+++ b/src/components/customHeader/custom_header.module.scss
@@ -26,10 +26,10 @@
   &.sticked {
   }
   .slogan {
-    bottom: 0px;
-    color: #3095b3;
+    bottom: 2px;
+    color: #7138c1;
     display: block;
-    font-size: 10px;
+    font-size: 8px;
     font-weight: 500;
     left: 0px;
     margin: 0 auto;
@@ -79,9 +79,9 @@
     cursor: pointer;
     // float: left;
     // margin: 0 0 0 10px;
-    // margin: -4px 30px 4px 0px;
     margin: -4px 0 8px;
     max-width: 100%;
+    width: 120px;
     &.juancho {
       height: 60px;
       width: auto;
