--- a/src/components/fullScreenLoading/fullScreenLoading.module.scss
+++ b/src/components/fullScreenLoading/fullScreenLoading.module.scss
@@ -9,9 +9,9 @@
     top: 0;
     width: 100%;
     z-index: 9999;
-    &:not(.active) {
-        display: none;
-    }
+    // &:not(.active) {
+    //     display: none;
+    // }
     img {
         width: 100px;
     }
