--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -278,7 +278,7 @@ span.MuiBadge-badge {
     .Toastify__progress-bar--wrp {
       // Barra de progreso
       border-bottom-left-radius: var(--toastify-toast-bd-radius);
-      bottom: 0;
+      bottom: 2px;
       height: 5px;
       left: 0;
       margin: 0 auto;
