--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -199,7 +199,7 @@ section.Onboarding {
     position: relative;
     width: calc(100% - 80px);
     z-index: 1;
-    p {
+    article {
       font-size: 16px;
       padding: 10px 20px;
     }
