Ajustes modal de premios

--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -241,6 +241,9 @@ section.Onboarding {
         b {
           display: block;
         }
+        span {
+          display: block;
+        }
         img {
           border-radius: 50%;
         }
