--- a/src/components/bonusList/bonusList.module.scss
+++ b/src/components/bonusList/bonusList.module.scss
@@ -2,7 +2,7 @@
     .item {
         background-image: url(/images/marcos/marco-01.svg);
         background-position: -8px -8px;
-        background-size: calc(100% + 16px);
+        background-size: calc(100% + 46px);
         background-color: #fef7ea;
         background-repeat: no-repeat;
         // backdrop-filter: blur(10px);
@@ -22,7 +22,7 @@
             left: 20px;
             position: absolute;
             top: 0px;
-            width: 50px;
+            width: 60px;
         }
         .favContent {
             .leagueIconFavorite {
@@ -66,7 +66,7 @@
         .contentTexts {
             bottom: 20px;
             left: 20px;
-            margin: 0 0 10px 10px;
+            margin: 10px 0 10px 10px;
             // position: absolute;
             h2 {
                 margin: 0 auto 0;
