--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -224,7 +224,7 @@ section.Onboarding {
       display: flex;
     }
     :global(.Card) {
-      background: linear-gradient(270deg, #7a0ba1 0%, #003875 100%);
+      background: linear-gradient(228deg, #7a0ba19e 0%, #003875 100%);
       box-shadow: inset 1px 1px 2px 0px #c9c9c9;
       box-shadow: initial;
       color: white;
