--- a/src/components/login/login.module.scss
+++ b/src/components/login/login.module.scss
@@ -1,6 +1,9 @@
 .LoginComponent {
+  text-align: center;
+  width: 100%;
   .playButton {
-    margin-top: 18px;
+    margin-top: 0px;
+    width: 100%;
   }
   .contryAndPhone {
     display: flex;
