--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -44,7 +44,7 @@ section.Onboarding {
         background: linear-gradient(83.23deg, #feb154 -6.32%, #d263ee 23.89%, #5d5af6 67.88%, #09e0a0 107.67%),
           linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
         border-radius: 10px;
-        height: 50px;
+        height: 46px;
         left: -2px;
         position: absolute;
         top: 18px;
@@ -197,10 +197,11 @@ section.Onboarding {
     color: white;
     margin: 30px auto 0;
     position: relative;
-    width: calc(100% - 80px);
+    width: calc(100% - 20px);
     z-index: 1;
     article {
       font-size: 16px;
+      line-height: 22px;
       padding: 10px 20px;
     }
     .background {
@@ -231,6 +232,7 @@ section.Onboarding {
       display: flex;
       font-size: 14px;
       margin: 20px 10px 0px;
+      padding-right: 6px;
       text-align: center;
       width: 100%;
       a {
@@ -248,12 +250,28 @@ section.Onboarding {
           border-radius: 50%;
         }
       }
+
       .products {
         display: flex;
         height: max-content;
         margin-left: 20px;
-        overflow-x: scroll;
         padding-bottom: 2px;
+        &.manyProducts {
+          overflow-x: scroll;
+          &::-webkit-scrollbar-thumb {
+            // background: linear-gradient(45deg, #ff416c, #ff4b2b); /* Degradado facherito */
+            background-color: #c93530;
+            border-radius: 5px;
+          }
+          &::-webkit-scrollbar {
+            width: 2px; /* Para vertical */
+            height: 2px; /* Para horizontal */
+          }
+          &::-webkit-scrollbar-track {
+            background: #740e9f; /* Fondo oscuro */
+            border-radius: 5px;
+          }
+        }
         .itemProduct {
           position: relative;
           .zoomIcon {
@@ -288,19 +306,6 @@ section.Onboarding {
               width: max-content;
             }
           }
-        }
-        &::-webkit-scrollbar-thumb {
-          // background: linear-gradient(45deg, #ff416c, #ff4b2b); /* Degradado facherito */
-          background-color: #c93530;
-          border-radius: 5px;
-        }
-        &::-webkit-scrollbar {
-          width: 2px; /* Para vertical */
-          height: 2px; /* Para horizontal */
-        }
-        &::-webkit-scrollbar-track {
-          background: #740e9f; /* Fondo oscuro */
-          border-radius: 5px;
         }
       }
       .sellerDescription {
