--- a/src/components/previewUser/previewUser.module.scss
+++ b/src/components/previewUser/previewUser.module.scss
@@ -70,10 +70,15 @@
     width: 50%;
     z-index: -1;
     @media screen and (min-width: 1024px) {
-      left: 660px;
-      top: 53px;
-      margin: 0 auto;
-      right: 0;
+      height: 100%;
+      border-radius: 10px 0 0 0;
+      left: initial;
+      opacity: 1;
+      padding-right: 10px;
+      right: 250px;
+      top: 57px;
+      transform: none;
+      width: 300px;
     }
     @media screen and (max-width: 480px) {
       height: 100%;
