--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -258,19 +258,19 @@ section.Onboarding {
         padding-bottom: 2px;
         &.manyProducts {
           overflow-x: scroll;
-          &::-webkit-scrollbar-thumb {
-            // background: linear-gradient(45deg, #ff416c, #ff4b2b); /* Degradado facherito */
-            background-color: #c93530;
-            border-radius: 5px;
-          }
-          &::-webkit-scrollbar {
-            width: 2px; /* Para vertical */
-            height: 2px; /* Para horizontal */
-          }
-          &::-webkit-scrollbar-track {
-            background: #740e9f; /* Fondo oscuro */
-            border-radius: 5px;
-          }
+          // &::-webkit-scrollbar-thumb {
+          //   // background: linear-gradient(45deg, #ff416c, #ff4b2b); /* Degradado facherito */
+          //   background-color: #c93530;
+          //   border-radius: 5px;
+          // }
+          // &::-webkit-scrollbar {
+          //   width: 2px; /* Para vertical */
+          //   height: 2px; /* Para horizontal */
+          // }
+          // &::-webkit-scrollbar-track {
+          //   background: #740e9f; /* Fondo oscuro */
+          //   border-radius: 5px;
+          // }
         }
         .itemProduct {
           position: relative;
