--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -890,17 +890,20 @@ body {
   font-display: swap;
   outline: none !important;
   &::-webkit-scrollbar-track {
-    background-color: #f4f4f4;
+    background: #290d56ba; /* Fondo oscuro */
   }
   &::-webkit-scrollbar {
-    background-color: #f5f5f5;
-    height: 8px;
-    width: 8px;
+    // background-color: #f5f5f5;
+    width: 2px; /* Para vertical */
+    height: 2px; /* Para horizontal */
   }
   &::-webkit-scrollbar-thumb {
-    background-color: #34495e47;
+    background-color: #740e9f;
     cursor: pointer;
   }
+}
+
+.scrollStyle {
 }
 
 :root {
