Referir amigo en seller, estilos en onboarding, estilos menu movil

--- a/src/components/customHeader/custom_header.module.scss
+++ b/src/components/customHeader/custom_header.module.scss
@@ -36,7 +36,7 @@
     position: absolute;
     right: 0;
     text-align: left;
-    text-shadow: 1px 1px #cdcdcdde;
+    // text-shadow: 1px 1px #cdcdcdde;
     text-transform: uppercase;
     width: max-content;
   }
