--- a/src/components/userNotifications/userNotifications.module.scss
+++ b/src/components/userNotifications/userNotifications.module.scss
@@ -1,23 +1,28 @@
 .UserNotifications {
   // overflow-y: scroll;
   background: #ffffff;
-  border-radius: 10px;
+  border-radius: 10px 0 0 0;
   // box-shadow: 0px 0 10px #52525233;
   color: #585858;
   flex-direction: column;
   font-size: 14px;
   height: 100%;
   justify-content: flex-start;
-  margin: 0 -20px;
+  max-width: 210px;
+  // margin: 0 -20px;
   padding: 0;
+  right: 0;
   transition: 0.5s ease;
   width: 100%;
   // z-index: 0;
 
-  @media screen and (max-width: 480px) {
-    border-radius: 0;
-    height: 100%;
-    margin: 20px auto 50px;
+  @media screen and (min-width: 480px) {
+    left: 0;
+    margin: 0 auto;
+    right: -210px !important;
+    // border-radius: 0;
+    // height: 100%;
+    // margin: 20px auto 50px;
     // width: 90%;
   }
 
