--- a/src/components/wordCahllenge/wordChallenge.module.scss
+++ b/src/components/wordCahllenge/wordChallenge.module.scss
@@ -42,6 +42,7 @@
 .InputComponent {
     column-gap: 20px;
     display: flex;
+    flex-direction: column;
 
     .inputContent {
         border-radius: 10px;
@@ -71,4 +72,10 @@
             text-align: center;
         }
     }
+}
+
+.inputContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
