- Challenge preguntar por un producto - Btn cerrar modal premios - Refactor MessageTop - Detalle de puntos de un miembro de un ranking - Se añade aliado comercial

--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -1,7 +1,7 @@
 section.Onboarding {
   background: #19596b;
   background-image: url(/images/backgrounds/general-bg.png);
-  margin: 00px auto 90px;
+  // margin: 0px auto 90px;
   width: calc(100%);
   .bannerCaribeConf2025 {
     color: transparent;
