--- a/src/components/wordChallenge/wordChallenge.module.scss
+++ b/src/components/wordChallenge/wordChallenge.module.scss
@@ -62,6 +62,7 @@
 
         input {
             border-radius: inherit;
+            border: none;
             color: #521a93;
             font-size: 42px;
             height: 60px;
