Llamando a los productos directamente a la BD, ajustes menores de diseño

--- a/src/components/authorInformation/authorInformation.module.scss
+++ b/src/components/authorInformation/authorInformation.module.scss
@@ -16,7 +16,7 @@
     }
     .content {
         background: #525252b5;
-        border-bottom: 1px solid #673AB7;
+        // border-bottom: 1px solid #673AB7;
         padding: 20px 0 40px;
         position: relative;
         text-align: center;
