--- a/src/components/ranking/ranking.module.scss
+++ b/src/components/ranking/ranking.module.scss
@@ -14,6 +14,7 @@
             color: white;
             column-gap: 10px;
             display: flex;
+            height: 90px;
             margin: 0 auto 0px;
             padding: 10px 10px 14px 20px;
             position: relative;
