--- a/src/components/profileImage/profileImage.module.scss
+++ b/src/components/profileImage/profileImage.module.scss
@@ -1,5 +1,8 @@
-.profileImageContainer {
+.ProfileImageComponent {
   position: relative;
+  height: 100px;
+  margin: 0 auto;
+  width: 100px;
 
   .ProfileImage {
     align-items: center;
@@ -7,11 +10,12 @@
     border-radius: 50%;
     box-shadow: 3px 2px 4px #4545454d;
     display: flex;
-    height: 120px;
+    height: 100%;
     justify-content: center;
     margin: 0px auto 0;
     padding: 3px;
-    width: 120px;
+    position: relative;
+    width: 100%;
 
     &.previewUser {
       height: 50px;
