Cambio de look de pepe, productos en la page de redimir

--- a/src/components/itemCard/itemCard.module.scss
+++ b/src/components/itemCard/itemCard.module.scss
@@ -4,7 +4,7 @@ h3.title_destacada {
 
 .ItemCard {
   // max-height: 420px;
-  background: white;
+  background: #fef7ea;
   border-radius: 10px;
   box-shadow: 0 0 5px 0 #3a3a3a4d;
   box-sizing: border-box;
@@ -125,8 +125,8 @@ h3.title_destacada {
     .cashbackInformation {
       color: #2d81a9;
       display: block;
-      font-size: 12px;
-      margin: 16px 0 0 0;
+      font-size: 10px;
+      margin: 16px 10px 0;
       text-align: center;
     }
     .content_precio {
