--- a/src/components/bonusList/bonusList.module.scss
+++ b/src/components/bonusList/bonusList.module.scss
@@ -2,7 +2,7 @@
     .item {
         background-image: url(/images/marcos/marco-01.svg);
         background-position: -8px -8px;
-        background-size: calc(100% + 10px);
+        background-size: calc(100% + 40px);
         background-color: #fef7ea;
         background-repeat: no-repeat;
         // backdrop-filter: blur(10px);
@@ -12,14 +12,14 @@
         border-radius: 8px;
         color: #0e3266;
         height: 190px;
-        padding: 40px 0 0px 30px;
+        padding: 20px 0 12px 30px;
         position: relative;
         margin-bottom: 30px;
         &.withImage {
             // height: 200px;
         }
         .leagueIcon {
-            left: 20px;
+            right: 20px;
             position: absolute;
             top: 0px;
             width: 60px;
@@ -55,10 +55,10 @@
         }
         .image img {
             display: block;
-            margin: 0px auto 0;
-            max-height: 100px;
-            object-fit: contain;
-            width: 160px;
+            margin: 0px 0 0 20px;
+            max-height: 80px;
+            // object-fit: contain;
+            // width: 160px;
         }
         .price {
             margin: 10px 0 10px;
@@ -66,7 +66,8 @@
         .contentTexts {
             bottom: 20px;
             left: 20px;
-            margin: 10px 0 10px 10px;
+            margin: 20px 0 10px 0px;
+            width: 50%;
             // position: absolute;
             h2 {
                 margin: 0 auto 0;
@@ -76,10 +77,13 @@
                 margin: 0 auto 0;
             }
         }
+
         .actions {
             display: flex;
             justify-content: center;
-            margin: 10px 0 10px;
+            left: -30px;
+            margin: 0px 0 10px;
+            position: relative;
         }
         hr {
             border-top: 1px dashed #ecb349;
