--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -772,6 +772,7 @@ section.page {
 .m-20 {
   margin: 10px;
 }
+
 .m-b-10 {
   margin-bottom: 10px !important;
 }
@@ -779,6 +780,11 @@ section.page {
 .m-b-20 {
   margin-bottom: 20px !important;
 }
+
+.m-t-30 {
+  margin-top: 30px !important;
+}
+
 .m-t-20 {
   margin-top: 20px !important;
 }
