--- a/src/components/itemCard/itemCard.module.scss
+++ b/src/components/itemCard/itemCard.module.scss
@@ -4,7 +4,7 @@ h3.title_destacada {
 
 .ItemCard {
   // max-height: 420px;
-  background: #fef7ea;
+  background: white;
   border-radius: 10px;
   box-shadow: 0 0 5px 0 #3a3a3a4d;
   box-sizing: border-box;
