--- a/src/components/wordChallenge/wordChallenge.module.scss
+++ b/src/components/wordChallenge/wordChallenge.module.scss
@@ -33,7 +33,7 @@
         span {
             background: linear-gradient(90deg, #74ffd0, #3ac8be);
             font-weight: bold;
-            -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: #0000;
         }
     }
@@ -66,17 +66,6 @@
         padding: 2px;
         position: relative;
 
-        &::before {
-            content: "";
-            background: linear-gradient(83.23deg, #feb154 -6.32%, #d263ee 23.89%, #5d5af6 67.88%, #09e0a0 107.67%),
-                linear-gradient(0deg, #0000004d, #0000004d);
-            height: calc(100% + 4px);
-            left: -2px;
-            position: absolute;
-            top: -2px;
-            width: calc(100% + 4px);
-        }
-
         input {
             border-radius: inherit;
             border: none;
@@ -86,6 +75,13 @@
             position: relative;
             width: 40px;
             text-align: center;
+        }
+
+        &:has(input:focus){
+            background: 
+            linear-gradient(83.23deg, #feb154 -6.32%, #d263ee 23.89%, #5d5af6 67.88%, #09e0a0 107.67%),
+            linear-gradient(0deg, #0000004d, #0000004d);
+            top: -1px;
         }
     }
 }
