--- a/src/components/ranking/ranking.module.scss
+++ b/src/components/ranking/ranking.module.scss
@@ -3,6 +3,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        padding: 0;
         .item {
             // background-color: #030c4b;
             background-color: #07244c;
