--- a/src/components/itemCard/itemCard.module.scss
+++ b/src/components/itemCard/itemCard.module.scss
@@ -83,6 +83,7 @@ h3.title_destacada {
         border-radius: 8px 8px 0 0;
         // max-height: 220px;
         margin: initial;
+        object-position: top;
         position: relative;
         transition: 0.2s ease;
         z-index: 1;
