Redenciones, MessageTop custom

--- a/src/components/itemCard/itemCard.module.scss
+++ b/src/components/itemCard/itemCard.module.scss
@@ -333,6 +333,13 @@ h3.title_destacada {
       top: 4px;
     }
   }
+  .notAvailableLabel {
+    color: #f89b52;
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 30px !important;
+  }
   .contentAddi {
     span {
       color: #4e7dff;
