--- a/src/components/messagesTop/messagesTop.module.scss
+++ b/src/components/messagesTop/messagesTop.module.scss
@@ -1,18 +1,94 @@
 .MessagesTop {
-    background-image: url("/images/backgrounds/camapanita.svg");
-    background-size: 350px;
-    background-repeat: no-repeat;
     color: #16397d;
     font-size: 13px;
-    font-weight: 600;
-    height: 93px;
+    // height: 43px;
     left: 0;
     margin: 0 auto;
-    opacity: 1;
-    padding: 18px 50px 30px 110px;
     position: fixed;
     right: 0;
-    top: 60px;
-    width: 342px;
-    z-index: 4;
+    top: 42px;
+    width: 352px;
+    z-index: 6;
+    .content {
+        background-image: url("/images/backgrounds/message-top/02.svg");
+        background-size: 350px;
+        background-repeat: no-repeat;
+
+        align-items: center;
+        display: flex;
+
+        color: #16397d;
+        height: 43px;
+        margin: 0 auto;
+        opacity: 1;
+        padding: 16px 10px 20px 90px;
+        right: 0;
+        // width: 100%;
+        // text-align: center;
+        z-index: 6;
+        perspective: 1000px;
+
+        animation: showContent 3s ease-out forwards;
+        opacity: 0;
+
+        > * {
+            width: 100%;
+        }
+        b {
+            font-size: 14px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+    }
+    .icon {
+        animation: voltereta 2s ease-out forwards;
+
+        transform-style: preserve-3d;
+
+        left: 0;
+        position: absolute;
+        top: 0px;
+        width: 77px;
+        [alt="icon"] {
+            position: relative;
+        }
+        .imgLights__container {
+            animation: showContent 3s ease-out forwards;
+            .imgLights {
+                left: -30px;
+                max-height: initial;
+                max-width: inherit;
+                position: absolute;
+                top: -30px;
+                width: 140px;
+            }
+        }
+    }
+}
+
+@keyframes showContent {
+    0% {
+        opacity: 0;
+    }
+    75% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes voltereta {
+    0% {
+        left: 200px;
+        transform: rotateX(0deg);
+    }
+    50% {
+        left: 200px;
+        transform: rotateX(0deg);
+    }
+    100% {
+        transform: rotateX(360deg);
+        left: 0px;
+    }
 }
